# Uni-Dubna-Commander-Qt

./: .gitmodules  CMakeLists.txt  Constants.cpp  Constants.h  FolderItem.cpp  FolderItem.h  Login.h  main.cpp
Libs/GZip/: GZip.cpp  GZip.h
Network/: DownloadInfo.h  NetworkManager.cpp  NetworkManager.h
Widgets/: TreeWidgetItem.cpp  TreeWidgetItem.h
Widgets/LoginWidget/: LoginWidget.cpp  LoginWidget.h  LoginWidget.ui
Widgets/MainWindow/: MainWindow.cpp  MainWindow.h  MainWindow.ui
Widgets/ProgressWidget/: ProgressWidget.cpp  ProgressWidget.h  ProgressWidget.ui
